[gd_scene load_steps=23 format=2]

[ext_resource path="res://spoo_world/world/levels/level4/level4.gd" type="Script" id=1]
[ext_resource path="res://spoo_world/assets/img/paisajes/level4.jpg" type="Texture" id=2]
[ext_resource path="res://spoo_world/assets/icon/arrow_back50.png" type="Texture" id=3]
[ext_resource path="res://spoo_world/assets/icon/spoo.png" type="Texture" id=4]
[ext_resource path="res://spoo_world/assets/audio/level4.mp3" type="AudioStream" id=5]
[ext_resource path="res://spoo_world/assets/icon/music.png" type="Texture" id=6]
[ext_resource path="res://spoo_world/assets/typography/GameOfSquids-1GMVL.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://spoo_world/assets/icon/label.png" type="Texture" id=8]
[ext_resource path="res://spoo_world/assets/icon/nomusic.png" type="Texture" id=9]
[ext_resource path="res://spoo_world/assets/icon/ave.png" type="Texture" id=10]
[ext_resource path="res://spoo_world/assets/icon/ave_iz.png" type="Texture" id=11]
[ext_resource path="res://spoo_world/assets/img/igual.png" type="Texture" id=12]
[ext_resource path="res://spoo_world/assets/img/mayor_que.png" type="Texture" id=13]
[ext_resource path="res://spoo_world/assets/img/menor_que.png" type="Texture" id=14]

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 50, 70 )

[sub_resource type="StyleBoxTexture" id=2]
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 50, 70 )

[sub_resource type="StyleBoxTexture" id=3]
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 50, 70 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 35, 67.5 )

[sub_resource type="DynamicFont" id=5]
size = 13
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=7]
size = 60
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=8]
size = 60
font_data = ExtResource( 7 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [  ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="level4" type="Node2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 640, 400 )
scale = Vector2( 0.740741, 0.740741 )
texture = ExtResource( 2 )

[node name="Button" type="Button" parent="."]
margin_left = 49.0
margin_top = 38.0
margin_right = 107.0
margin_bottom = 102.0
focus_mode = 0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
enabled_focus_mode = 0

[node name="KinematicBody2D" type="KinematicBody2D" parent="."]
position = Vector2( 1144, 672 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="KinematicBody2D"]
texture = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D"]
position = Vector2( -2, -2 )
shape = SubResource( 4 )

[node name="AudioFondo" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
autoplay = true

[node name="points" type="Sprite" parent="."]
position = Vector2( 667.312, 83.375 )
scale = Vector2( 1.56603, 1.00238 )
texture = ExtResource( 8 )

[node name="label_point" type="Label" parent="points"]
margin_left = -56.3927
margin_top = -11.348
margin_right = 38.6073
margin_bottom = 20.652
custom_fonts/font = SubResource( 5 )
text = "0 / 15"

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = 448.0
margin_top = 248.0
margin_right = 575.0
margin_bottom = 393.0
color = Color( 0.160784, 0.14902, 0.192157, 1 )
__meta__ = {
"_edit_group_": true
}

[node name="numero_iz" type="Label" parent="ColorRect"]
margin_left = 40.0
margin_top = 42.0
margin_right = 102.0
margin_bottom = 103.0
custom_fonts/font = SubResource( 7 )

[node name="ColorRect2" type="ColorRect" parent="."]
margin_left = 704.0
margin_top = 240.0
margin_right = 831.0
margin_bottom = 385.0
color = Color( 0.160784, 0.14902, 0.192157, 1 )
__meta__ = {
"_edit_group_": true
}

[node name="numero_der" type="Label" parent="ColorRect2"]
margin_left = 32.0
margin_top = 42.0
margin_right = 106.0
margin_bottom = 117.0
custom_fonts/font = SubResource( 8 )

[node name="TButton_Music" type="TextureButton" parent="."]
margin_left = 1179.0
margin_top = 27.0
margin_right = 1247.0
margin_bottom = 98.0
toggle_mode = true
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 9 )
expand = true

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 6 )

[node name="aveIzq_1" type="Sprite" parent="."]
visible = false
position = Vector2( 1053, 89 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 10 )

[node name="aveIzq_2" type="Sprite" parent="."]
visible = false
position = Vector2( 1130, 185 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 10 )

[node name="aveIzq_3" type="Sprite" parent="."]
visible = false
position = Vector2( 992, 233 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 10 )

[node name="aveIzq_4" type="Sprite" parent="."]
visible = false
position = Vector2( 1193, 325 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 10 )

[node name="aveIzq_5" type="Sprite" parent="."]
visible = false
position = Vector2( 1034, 370 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 10 )

[node name="aveIzq_6" type="Sprite" parent="."]
visible = false
position = Vector2( 1143, 480 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 10 )

[node name="aveIzq_7" type="Sprite" parent="."]
visible = false
position = Vector2( 901, 499 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 10 )

[node name="aveIzq_8" type="Sprite" parent="."]
visible = false
position = Vector2( 896, 119 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 10 )

[node name="aveIzq_9" type="Sprite" parent="."]
visible = false
position = Vector2( 997, 574 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 10 )

[node name="aveDer_1" type="Sprite" parent="."]
visible = false
position = Vector2( 384, 136 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 11 )

[node name="aveDer_2" type="Sprite" parent="."]
visible = false
position = Vector2( 240, 98 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 11 )

[node name="aveDer_3" type="Sprite" parent="."]
visible = false
position = Vector2( 137, 230 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 11 )

[node name="aveDer_4" type="Sprite" parent="."]
visible = false
position = Vector2( 288, 279 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 11 )

[node name="aveDer_5" type="Sprite" parent="."]
visible = false
position = Vector2( 137, 407 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 11 )

[node name="aveDer_6" type="Sprite" parent="."]
visible = false
position = Vector2( 317, 423 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 11 )

[node name="aveDer_9" type="Sprite" parent="."]
visible = false
position = Vector2( 124, 633 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 11 )

[node name="aveDer_7" type="Sprite" parent="."]
visible = false
position = Vector2( 213, 531 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 11 )

[node name="aveDer_8" type="Sprite" parent="."]
visible = false
position = Vector2( 338, 602 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 11 )

[node name="menor_que" type="TextureButton" parent="."]
margin_left = 832.0
margin_top = 576.0
margin_right = 1363.0
margin_bottom = 1046.0
rect_scale = Vector2( 0.25, 0.25 )
texture_normal = ExtResource( 14 )

[node name="mayor_que" type="TextureButton" parent="."]
margin_left = 280.0
margin_top = 576.0
margin_right = 811.0
margin_bottom = 1046.0
rect_scale = Vector2( 0.25, 0.25 )
texture_normal = ExtResource( 13 )

[node name="igual" type="TextureButton" parent="."]
margin_left = 568.0
margin_top = 576.0
margin_right = 1148.0
margin_bottom = 1006.0
rect_scale = Vector2( 0.25, 0.25 )
texture_normal = ExtResource( 12 )

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="TButton_Music" to="." method="_on_TButton_Music_pressed"]
[connection signal="pressed" from="menor_que" to="." method="_on_menor_que_pressed"]
[connection signal="pressed" from="mayor_que" to="." method="_on_mayor_que_pressed"]
[connection signal="pressed" from="igual" to="." method="_on_igual_pressed"]
